--- a/src/app/cart.component.html
+++ b/src/app/cart.component.html
@@ -5,7 +5,7 @@
  
  
   <div class='table-responsive'>
-            <table class='table'>
+            <table class='table table-dark'>
                 <thead>
                     <tr>
                         <th>產品</th>
