--- a/src/app/customerlog.component.html
+++ b/src/app/customerlog.component.html
@@ -13,6 +13,9 @@
             通話紀錄
         </th>
         <th>
+            備註 (後續追蹤)
+        </th>
+        <th>
             時間
         </th>
     </tr>
@@ -40,6 +43,11 @@
                 </textarea>
             </td>
             <td>
+                <textarea [(ngModel)]='Comment' class="form-control" >
+
+                </textarea>
+            </td>
+            <td>
                 
             </td>
             <td>
@@ -57,6 +65,7 @@
                 <td>{{ item.PhoneNumber }}</td>
                 <td>{{ item.Email}}</td>
                 <td>{{ item.Note}}</td>
+                <td>{{ item.Comment}}</td>
                 <td>{{ item.RecordTime}}</td>
                 <td>
                         <button class="btn btn-danger" (click) = 'DeleteLog(item.RowKey, item.Name)' >
@@ -70,15 +79,4 @@
    
 </table>
 
-<ng-template #template>
-        <div class="modal-header">
-          <h4 class="modal-title pull-left">Modal</h4>
-          {{ item.Name }}
-          <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          This is a modal.
-        </div>
-</ng-template>
+ 
