--- a/src/app/customerlog.component.html
+++ b/src/app/customerlog.component.html
@@ -30,6 +30,7 @@
             <td>
                 <input type="string"
                 [(ngModel)]='PhoneNumber'
+                style="width: 6em;"
                 /> 
             </td>
             <td>
@@ -42,7 +43,7 @@
 
                 </textarea>
             </td>
-            <td>
+            <td  class="warning">
                 <textarea [(ngModel)]='Comment' class="form-control" >
 
                 </textarea>
