add loading spinner
add loading spinner

--- a/src/app/customerlog.component.html
+++ b/src/app/customerlog.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="row">
     <label>搜尋:</label>
     <input type="string"
@@ -5,6 +7,9 @@
     style="width: 6em;"
     /> 
 </div>
+
+<div class="loader" id="loader"></div>
+
 <table class="table table-bordered table-striped">
     <tr>
         <th>
