update to 6 and add paging
major updates to 6

--- a/src/app/customerlog.component.html
+++ b/src/app/customerlog.component.html
@@ -72,7 +72,7 @@
         </tr>
 
         <tbody> 
-            <tr *ngFor = 'let item of logList'>
+            <tr *ngFor = 'let item of logList | paginate: { itemsPerPage: 10, currentPage: p} '>
                 
                 <td>{{ item.Name}}</td>
                 <td>{{ item.PhoneNumber }}</td>
@@ -92,6 +92,7 @@
 
             </tr>
         </tbody>
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
    
 </table>
 
