--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,5 @@
 
 /* angular-cli file: src/styles.css */
 @import "../node_modules/angular-calendar/css/angular-calendar.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
