--- a/src/app/article/articleshow/articleshow.component.html
+++ b/src/app/article/articleshow/articleshow.component.html
@@ -29,3 +29,12 @@
   推廣網頁QR
   <a href='https://leecloud.blob.core.windows.net/image/qr.jpg' download="TeaQR.jpg"><img src='https://leecloud.blob.core.windows.net/image/qr.jpg' width=20% height=20% /></a>
 </div>
+
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+>
+  <p style="font-size: 20px; color: white">處理中...</p>
+</ngx-spinner>
