--- a/src/app/article/articleform/articleform.component.html
+++ b/src/app/article/articleform/articleform.component.html
@@ -1,3 +1,7 @@
+<div>
+    <span> <img src='../assets/Photos/tealogo.jpg' width=20% height=20% /></span>
+    <p></p>
+</div>
 <div class="nav navbar-nav navbar-right">
         <button type="button" class="btn btn-primary" (click)="SaveEntity()">儲存</button> | 
         <button type="button" class="btn btn-default" onclick="location.href='#/articlelist';">返回</button>   
