--- a/src/app/businesscenter/bcform/bcform.component.html
+++ b/src/app/businesscenter/bcform/bcform.component.html
@@ -1,3 +1,9 @@
+
+<div>
+    <span><img src='../assets/Photos/inhublogo.png' width=10% height=10% /></span>
+    <p></p>
+</div>
+
 <div class="nav navbar-nav navbar-right">
         <button type="button" class="btn btn-primary" (click)="SaveEntity()">儲存</button> | 
         <button type="button" class="btn btn-default" onclick="location.href='#/bccenter';">返回</button>   
