--- a/src/app/businesscenter/bclist/bclist.component.html
+++ b/src/app/businesscenter/bclist/bclist.component.html
@@ -1,3 +1,8 @@
+<div>
+    <span><img src='../assets/Photos/inhublogo.png' width=10% height=10% /></span>
+    <p></p>
+</div>
+
 <button type="button" class="btn btn-primary" onclick="location.href='#/bcform';">新增</button>
 <p></p>
 <ng-template #popTemplate> <div [innerHtml]="pophtml"></div></ng-template>
