--- a/src/app/customerlog.component.html
+++ b/src/app/customerlog.component.html
@@ -1,4 +1,7 @@
-
+<div>
+    <span> <img src='../assets/Photos/logo.jpg' width=20% height=20% /></span>
+    <p></p>
+</div>
 
 <div class="row">
     <label>搜尋:</label>
