--- a/src/app/article/articlelist/articlelist.component.html
+++ b/src/app/article/articlelist/articlelist.component.html
@@ -1,3 +1,8 @@
+<div>
+    <span> <img src='../assets/Photos/tealogo.jpg' width=20% height=20% /></span>
+    <p></p>
+</div>
+
 <button type="button" class="btn btn-primary" onclick="location.href='#/articleform';">新增文章</button>
 
 <div class="nav navbar-nav navbar-right">
