--- a/src/app/stoneweight.component.html
+++ b/src/app/stoneweight.component.html
@@ -1,3 +1,4 @@
+<span><img src='../assets/Photos/NHCC.jpg' width=100% height=40% /></span>
 <table class="table table-bordered table-striped">
     <tr>
         <th>
