add projectinv show

--- a/src/app/clientinventory/invupload/invupload.component.html
+++ b/src/app/clientinventory/invupload/invupload.component.html
@@ -23,7 +23,7 @@
 <h1>上傳普洱茶倉儲溫度紀錄照片(.jpg):</h1>
 <div class="body-content">
         <div class="center">
-                <ngx-file-drop dropZoneLabel="Drop files here" (onFileDrop)="dropped($event)" accept=".xlsx"
+                <ngx-file-drop dropZoneLabel="Drop files here" (onFileDrop)="dropped2($event)" 
                 (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
                     <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
                       拖曳或是選擇要上傳的照片(請勿超過4MB)
