--- a/src/app/clientinventory/invshow/invshow.component.html
+++ b/src/app/clientinventory/invshow/invshow.component.html
@@ -1,4 +1,7 @@
 <span> <img src='../assets/Photos/tealogo.jpg' width=20% height=20% /></span>
+<p></p>
+<span> <img src='../assets/Photos/title2.jpg' width=100% height=100% /></span>
+<p></p>
 <form>
   <div class="form-group">
         <table class="table table-bordered table-striped">
