enhance inv show page

--- a/src/app/clientinventory/invlist/invlist.component.html
+++ b/src/app/clientinventory/invlist/invlist.component.html
@@ -44,7 +44,8 @@
                     </td>
                   
                     <td>
-                        <button type="button" class="btn btn-dark" (click) = showEntity(item.ClientId)>展示庫藏內容</button>
+                        <button type="button" class="btn btn-dark" (click) = showEntity(item.ClientId)>庫藏內容</button> |
+                        <button type="button" class="btn btn-info" (click) = showUserEntity(item.ClientId)>藏家展示頁面</button>
                     </td>
                 </tr>
             </tbody>
