--- a/src/app/article/articlelist/articlelist.component.html
+++ b/src/app/article/articlelist/articlelist.component.html
@@ -24,6 +24,7 @@
         <th>
             
         </th>
+       
     </tr>
     
        
@@ -40,9 +41,10 @@
                 <td>
                         <button type="button" class="btn btn-info" (click) = openform(item.Id)>編輯文章</button>    |
                         <button type="button" class="btn btn-danger" (click) = delete(item.Id)>刪除文章</button>    |
-                        <button type="button" class="btn btn-dark" (click) = showarticle(item.Id)>展示文章</button>
+                        <button type="button" class="btn btn-secondary" (click) = showarticle(item.Id)>展示文章</button>
+                      
                 </td>
-                
+              
                 
             </tr>
         </tbody>
