--- a/src/app/clientinventory/invupload/invupload.component.html
+++ b/src/app/clientinventory/invupload/invupload.component.html
@@ -5,6 +5,10 @@
 </div>
 
 <h1>上傳普洱茶倉儲Excel檔案(.xlsx):</h1>
+<div>
+      <button type="button" class="btn btn-success" onclick="location.href='#/teaportal';">返回管理頁面</button>   
+      <p></p>
+</div>
 
 <div class="body-content">
         <div class="center">
