--- a/src/app/article/articleform/articleform.component.html
+++ b/src/app/article/articleform/articleform.component.html
@@ -2,11 +2,15 @@
     <span> <img src='../assets/Photos/tealogo.jpg' width=20% height=20% /></span>
     <p></p>
 </div>
-<div class="nav navbar-nav navbar-right">
-        <button type="button" class="btn btn-primary" (click)="SaveEntity()">儲存</button> | 
-        <button type="button" class="btn btn-default" onclick="location.href='#/articlelist';">返回</button>   
-        <p></p>    
+<div class="row">
+        <div class="col">
+                <button type="button" class="btn btn-primary" (click)="SaveEntity()">儲存</button> 
+        </div>
+        <div class="col">
+                <button type="button" class="btn btn-default" onclick="location.href='#/articlelist';">返回</button>   
+        </div>  
 </div>
+<p></p>    
 
 <div class="body-content">
 
@@ -92,9 +96,13 @@
     
   
      <hr>
-    <div class="nav navbar-nav navbar-right">
-            <button type="button" class="btn btn-primary" (click)="SaveEntity()">儲存</button> | 
-            <button type="button" class="btn btn-default" onclick="location.href='#/articlelist';">返回</button>       
+     <div class="row">
+            <div class="col">
+                    <button type="button" class="btn btn-primary" (click)="SaveEntity()">儲存</button> 
+            </div>
+            <div class="col">
+                    <button type="button" class="btn btn-default" onclick="location.href='#/articlelist';">返回</button>   
+            </div>  
     </div>
 
    
