--- a/src/app/article/articlelist/articlelist.component.html
+++ b/src/app/article/articlelist/articlelist.component.html
@@ -2,11 +2,14 @@
     <span> <img src='../assets/Photos/tealogo.jpg' width=20% height=20% /></span>
     <p></p>
 </div>
-
-<button type="button" class="btn btn-primary" onclick="location.href='#/articleform';">新增文章</button>
-
-<div class="nav navbar-nav navbar-right">
-    <button type="button" class="btn btn-secondary" onclick="location.href='#/articleshow';">回到展示介面</button>
+ 
+<div class="d-flex">
+        <div>
+                <button type="button" class="btn btn-success" onclick="location.href='#/teaportal';">返回管理頁面</button>  
+        </div>
+        <div class="ml-auto">
+                <button type="button" class="btn btn-primary" onclick="location.href='#/articleform';">新增文章</button>
+        </div>
 </div>
 <p></p>
 
@@ -39,10 +42,11 @@
                 <td>{{ item.Comment }}</td>
               
                 <td>
-                        <button type="button" class="btn btn-info" (click) = openform(item.Id)>編輯文章</button>    |
-                        <button type="button" class="btn btn-danger" (click) = delete(item.Id)>刪除文章</button>    |
-                        <button type="button" class="btn btn-secondary" (click) = showarticle(item.Id)>展示文章</button>
-                      
+                       <div class="btn-group">
+                            <button type="button" class="btn btn-sm btn-success" (click) = openform(item.Id)>編輯文章</button>    |
+                            <button type="button" class="btn btn-sm btn-danger" (click) = delete(item.Id)>刪除文章</button>    |
+                            <button type="button" class="btn btn-sm btn-info" (click) = showarticle(item.Id)>展示文章</button>
+                       </div>                    
                 </td>
               
                 
@@ -51,7 +55,10 @@
        
 </table>
 
-
+  <div>
+        <button type="button" class="btn btn-success" onclick="location.href='#/teaportal';">返回管理頁面</button>   
+        <p></p>
+  </div>
 
 <ngx-spinner
   bdColor="rgba(51,51,51,0.8)"
