--- a/src/app/clientinventory/portal/portal.component.html
+++ b/src/app/clientinventory/portal/portal.component.html
@@ -4,7 +4,7 @@
 <p></p>
 
 <div style="text-align:center;">
-        <h2>普洱茶倉系統管理頁面</h2>
+        <h2>普洱茶倉系統管理頁面</h2> <h3>(登入者:{{User}} , 登入時間: {{LogInTime}})   <button mat-raised-button (click)="logout()" color="primary">登出</button> </h3> 
 </div>
 
 
@@ -19,7 +19,7 @@
                                                  <button class="button"  onclick="location.href='#/clientlist';  "><i class="fa fa-address-book" ></i> 庫存列表 </button>
                                    </div>
                                    <div class="col">
-                                                 <button class="button" onclick="location.href='#/uploadinvfile';"><i class="fa fa-cloud-upload"></i> 上傳檔案 (更新庫存)</button>
+                                                 <button class="button" onclick="location.href='#/uploadinvfile';"><i class="fa fa-cloud-upload"></i> 上傳檔案 (更新時間: {{LastUpdateTime}})</button>
                                    </div>
                                  </div>
                                  <div class="row"   id ="frontbackground" >
