--- a/src/app/clientinventory/login/login.component.html
+++ b/src/app/clientinventory/login/login.component.html
@@ -33,3 +33,12 @@
 </div>
 
   
+
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+>
+  <p style="font-size: 20px; color: white">驗證登入中...</p>
+</ngx-spinner>
